--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+}
+.container {
+  width: 80vw;
 }
 
 .nav_bar .nav_items {
@@ -28,28 +30,48 @@ a {
   font-weight: bold;
 }
 
-.nav_bar .nav_items:hover {
+/* .nav_bar .nav_items:hover {
   border-bottom: 3px solid yellow;
-}
-
+} */
 
 /* Home Section */
 
 .home {
-  height: 80vh;
+  height: 70vh;
+  width: 70vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5%;
 }
 
 .home .left {
   background-color: var(--bg-color);
-  width: 620px;
+  width: 32vw;
+  height: fit-content;
   text-align: center;
   padding: 30px;
   border-radius: 10px;
   border: 1px solid yellow;
   box-shadow: var(--box-shadow);
+  word-wrap: break-word;
+}
+
+.resume_btn {
+  margin-right: 50px;
+}
+.home .right {
+  /* background-color: var(--bg-color); */
+  width: 32vw;
+  height: 33vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  /* /* border-radius: 10px; */
+  /* border: 1px solid yellow;
+  box-shadow: var(--box-shadow);  */
 }
 
 .home .right .img {
@@ -57,15 +79,13 @@ a {
   justify-content: center;
   align-items: center;
   /* background-color: yellow; */
-  /* height: 350px;
-  width: 350px; */
 }
 
 .home .right .img img {
-  height: 270px;
-  width: 270px;
+  height: 30vh;
+  width: 20vw;
   border: 5px solid yellow;
-  border-radius: 100%;
+  border-radius: 50%;
   animation-name: superman;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -104,30 +124,41 @@ a {
 /* Experience Section */
 
 .ex {
-  width: 900px;
+  width: 70vw;
+  margin-right: -20px;
+}
+.ex h1 {
+  text-align: center;
 }
 
 .ex-items {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
   background-color: var(--bg-color);
-  margin: 20px;
   padding: 30px;
-  width: 800px;
+  width: 60vw;
   border-radius: 10px;
   border: 1px solid yellow;
   box-shadow: var(--box-shadow);
+}
+.ex-items .left img {
+  height: 30vh;
+  width: 25vw;
 }
 
 /* Skills */
 
 .skills {
-  width: 900px;
+  width: 70vw;
+}
+.skills h1 {
+  text-align: center;
 }
 
 .skills .items {
   display: flex;
+  width: 70vw;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -137,7 +168,8 @@ a {
 }
 
 .skills .items .item {
-  width: calc(33.33%);
+  width: 20vw;
+  /* width: calc(33.33%); */
   background-color: black;
   margin: 20px;
   text-align: center;
@@ -148,7 +180,11 @@ a {
 }
 
 .skills .items .item img {
-  width: 70px;
+  width: 10vw;
+  height: 12vh;
+}
+.skills .items .item h3 {
+  font-size: 8pt;
 }
 
 /* Contact */
@@ -179,4 +215,40 @@ a {
 
 .contact-icon .items .icons {
   font-size: 2rem;
+}
+.projects {
+  width: 70vw;
+}
+.projects h1 {
+  text-align: center;
+}
+.contact {
+  width: 70vw;
+}
+.contact h1 {
+  margin-top: 50px;
+  text-align: center;
+}
+
+@media (max-width: 992px) {
+  .home .left {
+    background-color: var(--bg-color);
+    width: 100vw;
+    height: fit-content;
+    text-align: center;
+    padding: 30px;
+    border-radius: 10px;
+    border: 1px solid yellow;
+    box-shadow: var(--box-shadow);
+    word-wrap: break-word;
+  }
+  .home .right {
+    width: 100vw;
+    height: 33vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+  }
 }
